include_directories(${CMAKE_BINARY_DIR}/include)
include_directories(${CMAKE_INSTALL_PREFIX}/bempp/include)
include_directories("${CMAKE_SOURCE_DIR}/lib")

add_executable(dirichlet dirichlet.cpp meshes.cpp)
add_executable(neumann neumann.cpp meshes.cpp)
add_executable(dot_neumann dot_neumann.cpp meshes.cpp)
add_executable(dot_two_layers dot_two_layers.cpp meshes.cpp)
add_executable(dot_three_layers dot_three_layers.cpp meshes.cpp)
add_executable(helmholtz helmholtz.cpp meshes.cpp)
target_link_libraries(dirichlet bempp)
target_link_libraries(neumann bempp)
target_link_libraries(dot_neumann bempp)
target_link_libraries(dot_two_layers bempp)
target_link_libraries(dot_three_layers bempp)
target_link_libraries(helmholtz bempp)
