include_directories(${CMAKE_BINARY_DIR}/include)
include_directories(${CMAKE_INSTALL_PREFIX}/bempp/include)
include_directories("${CMAKE_SOURCE_DIR}/lib")

add_executable(dirichlet dirichlet.cpp meshes.cpp)
add_executable(dot_two_layers dot_two_layers.cpp meshes.cpp)
add_executable(dot_three_layers dot_three_layers.cpp meshes.cpp)
add_executable(helmholtz helmholtz.cpp meshes.cpp)
add_executable(maxwell_dirichlet maxwell_dirichlet.cpp)
target_link_libraries(dirichlet libbempp)
target_link_libraries(dot_two_layers libbempp)
target_link_libraries(dot_three_layers libbempp)
target_link_libraries(helmholtz libbempp)
target_link_libraries(maxwell_dirichlet libbempp)
