foamgriddir = $(includedir)/dune/foamgrid/foamgrid

foamgrid_HEADERS = foamgridedge.hh \
                   foamgridelements.hh \
                   foamgridentity.hh \
                   foamgridentitypointer.hh \
                   foamgridentityseed.hh \
                   foamgridfactory.hh \
                   foamgridgeometry.hh \
                   foamgridhierarchiciterator.hh \
                   foamgridindexsets.hh \
                   foamgridintersectioniterators.hh \
                   foamgridintersections.hh \
                   foamgridleafiterator.hh \
                   foamgridleveliterator.hh \
                   foamgridvertex.hh

include $(top_srcdir)/am/global-rules
